Release v0.48.7 recovery fixes, upgrade support and multilingual welcome